--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h1>Hi, everyone!</h1>
   <h2>Glad to see you on my first website!</h2>
   
-  <a href="{% url 'ads:all' %}">Check it out</a>
+  <a href="ads/templates/ads/ad_list.html">Check it out</a>
   
 </body>
 </html>
